# Sentinel

./: .gitignore  CMakeLists.txt
src/win/: CRC32.cpp  CRC32.h  Lexend.h  Logger.cpp  Logger.h  Menu.cpp  Menu.h  Process.cpp  Process.h  UI.cpp  UI.h  main.cpp
